--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,18 @@
+.container {
+    max-width: 600px;
+    margin: auto;
+}
+
 h1 {
     color: red;
+}
+
+p {
+    line-height: 1.6;
+}
+
+article + article {
+    margin-top: 3rem;
+    border-top: 1px solid rgba(239, 75, 63, 0.897);
+    padding-top: 3rem;
 }
